Bugfix and DB optimization

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,14 +47,8 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
-    // optional - RxJava2 support for Room
-//    implementation "androidx.room:room-rxjava2:$room_version"
-    implementation "androidx.room:room-rxjava3:2.4.0-alpha02"
-
-
-    // optional - RxJava3 support for Room
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    // Spark (for charts)
+    implementation 'com.robinhood.spark:spark:1.2.0'
 
     // optional - Guava support for Room, including Optional and ListenableFuture
     implementation "androidx.room:room-guava:$room_version"
