--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,8 +47,13 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
-    // Spark (for charts)
-    implementation 'com.robinhood.spark:spark:1.2.0'
+    implementation 'com.github.ivbaranov:materialfavoritebutton:0.1.5'
+
+    // MPAndroidChart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    // RxJava3
+    implementation "androidx.room:room-rxjava3:$room_version"
 
     // optional - Guava support for Room, including Optional and ListenableFuture
     implementation "androidx.room:room-guava:$room_version"
@@ -58,11 +63,11 @@ dependencies {
     testImplementation "androidx.room:room-testing:$room_version"
     implementation 'com.github.thunder413:DateTimeUtils:3.0'
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation "androidx.fragment:fragment:$fragment_version"
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation "androidx.fragment:fragment:1.3.4"
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
