--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,10 @@ buildscript {
         google()
         jcenter()
         maven { url "https://oss.jfrog.org/libs-snapshot" }
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.2"
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
