--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,10 @@ dependencies {
     implementation "androidx.room:room-guava:$room_version"
     implementation("com.google.guava:guava:30.1.1-android")
 
+    // Glide - for images management
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
     // optional - Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
     implementation 'com.github.thunder413:DateTimeUtils:3.0'
