--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,7 @@ android {
 }
 
 dependencies {
-    def fragment_version = "1.3.3"
-
+    def work_version = "2.5.0"
     def room_version = "2.3.0"
 
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
@@ -62,6 +61,9 @@ dependencies {
     // Glide - for images management
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    // (Java only)
+    implementation "androidx.work:work-runtime:$work_version"
 
     // optional - Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
